--- a/sway/config
+++ b/sway/config
@@ -40,12 +40,13 @@ assign [class="obs"] $ws0
 # 浮动应用
 # for_window [class="gedit"] floating enable
 
-# 外接显示器
-workspace $ws9 output HDMI-A-1
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #                                  Output Display                                     #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+
+# 外接显示器
+workspace $ws9 output HDMI-A-1
 
 # man 5 sway-output
 # 获取屏幕信息:swaymsg -t get_outputs
@@ -58,8 +59,10 @@ output * {
  	scale      0
 	# 屏幕旋转
 	transform  0
-  	# dpms on   # 显示器电源
-  	# toggle    # 显示器切换
+  # 显示器电源开关
+ 	# dpms on   
+  # 显示器切换
+ 	# toggle    
 }
 
 output eDP-1 {
@@ -67,36 +70,74 @@ output eDP-1 {
 }
 
 output HDMI-A-1 {
-  #	transform 270
-  #	toggle
+
 }
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #                                        Input                                        #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+
 # swaymsg -t get_inputs
 # man 5 sway-input
-input "ETPS/2_Elantech_Touchpad" {
+
+# 触摸板设置
+input "2:14:ETPS/2_Elantech_Touchpad" {
   dwt              enabled
   tap              enabled
-  natural_scroll   enabled
+  # 自然滚动方式
+  natural_scroll   disenabled
   middle_emulation enabled
+  # 灵敏度
+  pointer_accel    1
+  # 翻页速度
+  scroll_factor 5
+  # 手指映射
+  # lrm:1个手指视为左击，2个手指视为右击，3个手指视为中击 
+  # lmr:1指视为左击，2指视为中键单击，3指视为右击
+  tap_button_map lrm
 }
 
+# 指点杆
+input "2:14:ETPS/2_Elantech_TrackPoint" {
+  tap              enabled
+  # 自然滚动方式
+  natural_scroll   disenabled
+  # 灵敏度
+  pointer_accel    1
+  # 翻页速度
+  scroll_factor 5
+}
+
+# 键盘设置
 # man 7 xkeyboard-config
-input "Thinkpad Extra Buttons" {
+input "6058:20564:Thinkpad_Extra_Buttons" {
+  # 键盘布局
   xkb_layout   us,de
   xkb_variant  ,nodeadkeys
   xkb_options  grp:alt_shift_toggle
+  # 启用CapsLock
+  xkb_capslock enabled
+  # 启用NumLock
+  xkb_numlock enabled
   # 键盘重复延迟速率
   repeat_delay 500
   repeat_rate  5
+
+  # 将输入映射到指定的输出。只有当设备是指针、触摸或绘图平板设备时才有意义。
+  # map_to_output 
 }
+
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #                                        自启                                         #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+
 exec fcitx
+exec swayidle -w \
+         timeout 10 $img_lock \
+         timeout 20 'swaymsg "output * dpms off"' \
+              resume 'swaymsg "output * dpms on"' \
+         before-sleep 'swaylock -f -c 000000' &
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #                                        Keys                                         #
