--- a/sway/config
+++ b/sway/config
@@ -153,7 +153,7 @@ bindsym $mod+o exec $menu
 bindsym $mod+e exec $term -e ranger
 bindsym $mod+Shift+e exec nautilus
 
-# 关闭应用
+# 关闭面板
 bindsym $mod+q kill
 
 # 截图
@@ -207,7 +207,7 @@ bindsym $mod+$down  focus down
 bindsym $mod+$up    focus up
 bindsym $mod+$right focus right
 
-# 移动面板至其它窗口
+# 移动面板
 bindsym $mod+Shift+$left  move left
 bindsym $mod+Shift+$down  move down
 bindsym $mod+Shift+$up    move up
@@ -238,14 +238,16 @@ bindsym $mod+Shift+8 move container to workspace $ws8;workspace $ws8
 bindsym $mod+Shift+9 move container to workspace $ws9;workspace $ws9
 bindsym $mod+Shift+0 move container to workspace $ws0;workspace $ws0
 
-# 返回上一次进入的窗口
+# 返回上一次活动的窗口
 workspace_auto_back_and_forth no
 bindsym $mod+z workspace back_and_forth
+# 移动面板至上一次活动的窗口
 bindsym $mod+Shift+z move container to workspace back_and_forth; workspace back_and_forth
 
-# 进入下一个|上一个窗口
+# 切换到下一个|上一个窗口
 bindsym $mod+period workspace next
 bindsym $mod+comma workspace prev
+
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #                                        Mode                                         #
