--- a/sway/config
+++ b/sway/config
@@ -171,17 +171,17 @@ bindsym XF86AudioRaiseVolume exec amixer set Master playback 5+
 bindsym XF86AudioMicMute exec "amixer set Capture toggle"
 
 # 亮度(F5:-,F6:+)
-bindsym XF86MonBrightnessDown exec "brightnessctl set 5%-"
-bindsym XF86MonBrightnessUp exec "brightnessctl set +5%"
+#bindsym XF86MonBrightnessDown exec "brightnessctl set 5%-"
+#bindsym XF86MonBrightnessUp exec "brightnessctl set +5%"
 
 # 面板分割方向
 bindsym $mod+v splitv
 bindsym $mod+b splith
 
 # 面板布局
+bindsym $mod+c layout toggle split
 bindsym $mod+Shift+v layout stacking
 bindsym $mod+Shift+b layout tabbed
-bindsym $mod+c layout toggle split
 
 # 面板全屏
 bindsym $mod+f fullscreen
