--- a/sway/config
+++ b/sway/config
@@ -4,8 +4,8 @@
 
 # 主键(Mod1=<Alt>,Mod4=<Super>)
 set $mod   Mod4
-#set $term  xfce4-terminal
-set $term  alacritty
+set $term  xfce4-terminal
+#set $term  alacritty
 set $menu  rofi -show drun -theme config
 set $screenshot grim Pictures/$(date +%Y-%m-%d-%H:%M:%S).jpeg -t jpeg
 set $left  h
