--- a/sway/status.conf
+++ b/sway/status.conf
@@ -10,7 +10,8 @@ general {
 }
 
 # 定制温度控制器
-order += "cmus"
+order += "moc"
+#order += "cmus"
 order += "volume_status"
 #order += "air_quality"
 order += "cpu_temperature 0"
@@ -53,6 +54,27 @@ backlight {
   # 启动时亮度
   #brightness_initial = 40
   format = "[\?color=#00CED1 ☼ {level}%]"
+}
+
+moc {
+  # 下一首鼠标左键
+  button_next = 3
+  # 上一首鼠标右键
+  button_previous = 1
+  # 暂停/开始鼠标中间
+  button_pause = 2
+  # 停止无 
+  button_stop = 0
+  cache_timeout = 0.1
+  sleep_timeout = 1
+  # 播放颜色
+  color_playing = "#00CED1"
+  # 暂停颜色
+  color_paused = "#32CD32"
+  # 停止颜色
+  color_stopped = "#FF69B4"
+  format = "[\?if=is_started [\?if=is_playing >] [\?if=is_paused \|\|] [\?if=is_stopped ..][[{artist}] [\?soft - ][{title}] | [{file}]]]"
+
 }
 
 cmus {
