--- a/terminal/alacritty/alacritty.yml
+++ b/terminal/alacritty/alacritty.yml
@@ -173,8 +173,8 @@ draw_bold_text_with_bright_colors: true
 colors:
   # Default colors
   primary:
-    background: '0x000000'
-    foreground: '0xFFFFFF'
+    background: '0xF2EEED'
+    foreground: '0x666666'
 
   # Normal colors
   normal:
@@ -193,9 +193,9 @@ colors:
     red:     '0xFF5555'
     green:   '0x55FF55'
     yellow:  '0xFFFF55'
-    blue:    '0x3F3FF8'
+    blue:    '0x5555FF'
     magenta: '0xFF55FF'
-    cyan:    '0x55FFFF'
+    cyan:    '0xFF69B4'
     white:   '0xFFFFFF'
 
 # Colors (Tomorrow Night Bright)
