--- a/sway/config
+++ b/sway/config
@@ -7,7 +7,7 @@ set $mod   Mod4
 set $term  xfce4-terminal
 set $term2 alacritty
 set $menu  rofi -show drun -theme config
-set $screenshot grim Pictures/$(date +%Y-%m-%d-%H-%M-%S).jpg -t jpeg
+
 set $left  h
 set $down  j
 set $up    k
@@ -20,24 +20,35 @@ set $ws3 3:🔍 Browser
 set $ws4 4:💻 Vbox
 set $ws5 5:📺 Video
 set $ws6 6:🎶 Music
-set $ws7 7:🕸
+set $ws7 7:🕸 Other
 set $ws8 8:🎮 Game
 set $ws9 9:HDMI
 set $ws0 10:🕸 OBS
 set $wsNULL Null
 
 # 图片
-set $img_bg     ~/Pictures/bg/flowers/02.jpg
-set $img_lock   swaylock -e -F -f -i ~/Pictures/bg/flowers/01.jpg
+#set $img_bg     ~/Pictures/bg/flowers/02.jpg
+#set $img_bg     ~/Pictures/bg/mac/iPhone.jpg
+set $img_bg     ~/Pictures/bg/people/44.jpg
+
+#set $img_lock   swaylock -e -F -f -i ~/Pictures/bg/flowers/01.jpg
+set $img_lock   swaylock -e -F -f -i ~/Pictures/bg/people/04.jpg
+#set $img_lock   swaylock -e -F -f -i ~/Pictures/bg/win/027.jpg
+
+# 截屏
+set $screenshot_full grim ~/Pictures/$(date +%Y-%m-%d-%H-%M-%S).jpg -t jpeg
+set $screenshot_part grim -g "$(slurp)" ~/Pictures/$(date +%Y-%m-%d-%H-%M-%S).jpg -t jpeg
+set $screenshot_panel "bash -c ~/.config/sway/screenshot_panel.sh"
 
 # 应用在特定窗口启动
+# swaymsg -t get_tree | grep "app_id"
 assign [class="VSCodium"] $ws2
 assign [class="firefox"] $ws3
 assign [class="Chromium"] $ws3
 assign [class="netease-cloud-music"] $ws6
 assign [class="Steam"] $ws8
 assign [class="obs"] $ws0
-assign [class=".*[eE]dit.*" title="gedit"] $ws2
+assign [app_id="gedit"] $ws2
 
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
@@ -148,11 +159,11 @@ input "6058:20564:Thinkpad_Extra_Buttons" {
 exec mocp &
 exec fcitx
 
-exec_always swayidle -w \
+exec swayidle -w \
                 timeout 300 $img_lock \
                 timeout 600 'swaymsg "output * dpms off"' \
                 resume 'swaymsg "output * dpms on"' \
-                before-sleep $img_lock &
+                before-sleep $img_lock 
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #                                        Keys                                         #
@@ -178,9 +189,6 @@ bindsym $mod+Shift+e exec pcmanfm
 
 # 关闭面板
 bindsym $mod+q kill
-
-# 截图
-bindsym Print exec $screenshot
 
 # 录屏
 bindsym $mod+g exec deepin-voice-recorder
@@ -277,6 +285,18 @@ bindsym $mod+comma workspace prev
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
 #                                        Mode                                         #
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
+
+# 截屏
+
+bindsym Print mode "$screenshot"
+set $screenshot (1)Full ,(2)Part ,(3)Panel
+mode "$screenshot" {
+  bindsym 1 exec $screenshot_full   ,mode "default"
+  bindsym 2 exec $screenshot_part   ,mode "default"
+  bindsym 3 exec $screenshot_panel  ,mode "default"
+  bindsym Escape        mode "default"
+  bindsym Print         mode "default"
+}
 
 # 调整面板样式
 bindsym $mod+m mode "$border_style"
