--- a/sway/config
+++ b/sway/config
@@ -4,9 +4,6 @@
 
 # 主键(Mod1=<Alt>,Mod4=<Super>)
 set $mod   Mod4
-set $term  xfce4-terminal
-set $term2 alacritty
-set $menu_drun   rofi -show drun -theme config
 
 set $left  h
 set $down  j
@@ -35,11 +32,6 @@ set $img_bg     ~/Pictures/bg/people/44.jpg
 set $img_lock   swaylock -e -F -f -i ~/Pictures/bg/people/04.jpg
 #set $img_lock   swaylock -e -F -f -i ~/Pictures/bg/win/027.jpg
 
-# 截屏
-set $screenshot_full grim ~/Pictures/$(date +%Y-%m-%d-%H-%M-%S).jpg -t jpeg
-set $screenshot_part grim -g "$(slurp)" ~/Pictures/$(date +%Y-%m-%d-%H-%M-%S).jpg -t jpeg
-set $screenshot_panel "bash -c ~/.config/sway/screenshot_panel.sh"
-
 # 应用在特定窗口启动
 # swaymsg -t get_tree | grep "app_id"
 assign [app_id="gedit"] $ws2
@@ -64,30 +56,41 @@ output * {
 	# 背景:fill|fit|center|tile
   #      拉伸|填充|合适|居中|瓷砖 
 	background $img_bg fill
+
   # 填充可提供回退颜色以覆盖输出的剩余部分
   # background $img_bg fit #FF0000
+#
   # 单色填充
   # background #FF0000 solid_color
  
 	# 分辨率
 	resolution 1920x1080@60Hz
+
 	# 缩放,HiDPI不支持Xwayland客户端(窗口将变得模糊)。
  	scale      0
+
   # 缩放输出:linear|nearest|smart
   #           模糊|线性|智能
   scale_filter linear
+
   # 色彩模式:rgb|bgr|vrgb|vbgr|none
   subpixel rgb
+
 	# 屏幕旋转
 	transform  0
+
   # 延迟渲染
   max_render_time 1
+
   # 通过DPMS启用或禁用指定的输出
  	# dpms on   
+#
   # 切换输出
  	# toggle    
+#
   # 禁用|启用输出
   # disable|enable
+#
 }
 
 output eDP-1 {
@@ -176,20 +179,6 @@ exec swayidle -w \
 # 与exec类似，但是shell命令将在重新加载后再次执行。
 # exec_always < shell命令>
 
-# 打开终端
-bindsym $mod+Return workspace $ws1; exec $term
-bindsym $mod+Shift+Return workspace $ws1; exec $term2
-
-# 打开应用菜单
-bindsym $mod+o exec $menu_drun
-
-# 打开文件管理器
-bindsym $mod+e exec $term -e ranger
-bindsym $mod+Shift+e exec pcmanfm
-
-# 关闭面板
-bindsym $mod+q kill
-
 # 音量(F1:0,F2:-,F3:+)
 bindsym XF86AudioMute exec "amixer set Master toggle && amixer set Speaker on"
 bindsym XF86AudioLowerVolume exec amixer set Master playback 5-  
@@ -202,14 +191,19 @@ bindsym XF86AudioMicMute exec "amixer set Capture toggle"
 bindsym XF86MonBrightnessDown exec "brightnessctl specific 5%-"
 bindsym XF86MonBrightnessUp exec "brightnessctl specific 5%+"
 
+# 打开终端
+bindsym $mod+Return workspace $ws1; exec xfce4-terminal
+bindsym $mod+Shift+Return workspace $ws1; exec alacritty
+
+# 打开应用菜单
+bindsym $mod+o exec rofi -show drun -theme config
+
+# 关闭面板
+bindsym $mod+q kill
+
 # 面板分割方向
 bindsym $mod+v splitv
 bindsym $mod+b splith
-
-# 面板布局
-bindsym $mod+c layout toggle split
-bindsym $mod+Shift+v layout stacking
-bindsym $mod+Shift+b layout tabbed
 
 # 面板全屏
 bindsym $mod+f fullscreen
@@ -223,11 +217,9 @@ bindsym $mod+space focus mode_toggle
 # 父焦点
 bindsym $mod+a focus parent
 
-# 隐藏面板
-bindsym $mod+Shift+minus move scratchpad
-
-# 显示面板
-bindsym $mod+minus scratchpad show
+# 隐藏|显示面板
+bindsym $mod+u move scratchpad
+bindsym $mod+Shift+u scratchpad show
 
 # 移动面板焦距
 bindsym $mod+$left  focus left
@@ -269,12 +261,13 @@ bindsym $mod+Shift+0 move container to workspace $ws0;workspace $ws0
 # 返回上一次活动的窗口
 workspace_auto_back_and_forth no
 bindsym $mod+z workspace back_and_forth
+
 # 移动面板至上一次活动的窗口
 bindsym $mod+Shift+z move container to workspace back_and_forth; workspace back_and_forth
 
 # 切换到下一个|上一个窗口
-bindsym $mod+period workspace next
-bindsym $mod+comma workspace prev
+bindsym $mod+tab workspace next
+bindsym $mod+Shift+tab workspace prev
 
 
 # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # # #
@@ -283,11 +276,11 @@ bindsym $mod+comma workspace prev
 
 # 截屏
 bindsym Print mode "$screenshot"
-set $screenshot ScreenShot => (1)Full (2)Part (3)Panel
+set $screenshot ScreenShot => (1)Full (2)Panel (3)Part 
 mode "$screenshot" {
-  bindsym 1 exec $screenshot_full  ,mode "default"
-  bindsym 2 exec $screenshot_part  ,mode "default"
-  bindsym 3 exec $screenshot_panel ,mode "default"
+  bindsym 1 exec grim ~/Pictures/$(date +%Y-%m-%d-%H-%M-%S).jpg -t jpeg ,mode "default"
+  bindsym 2 exec "bash -c ~/.config/sway/screenshot_panel.sh" ,mode "default"
+  bindsym 3 exec grim -g "$(slurp)" ~/Pictures/$(date +%Y-%m-%d-%H-%M-%S).jpg -t jpeg ,mode "default"
 
   bindsym Escape mode "default"
   bindsym Return mode "default"
@@ -322,17 +315,17 @@ mode "$sway" {
 }
 
 # 系统
-bindsym $mod+Shift+s mode "$system"
+bindsym $mod+p mode "$system"
 set $system System => (r)eboot (p)oweroff (s)uspend(men) (h)ibernate(swap)
 mode "$system" {
-  bindsym r       exec systemctl reboot                 ,mode "default"
-  bindsym p       exec systemctl poweroff               ,mode "default"
-  bindsym s       exec systemctl suspend && $img_lock   ,mode "default"
-  bindsym h       exec systemctl hibernate && $img_lock ,mode "default"
+  bindsym r exec systemctl reboot                 ,mode "default"
+  bindsym p exec systemctl poweroff               ,mode "default"
+  bindsym s exec systemctl suspend && $img_lock   ,mode "default"
+  bindsym h exec systemctl hibernate && $img_lock ,mode "default"
 
   bindsym Escape mode "default"
   bindsym Return mode "default"
-  bindsym $mod+Shift+s mode "default"
+  bindsym $mod+p mode "default"
 }
 
 # 调整面板大小
@@ -350,41 +343,40 @@ mode "resize" {
 
 # Browser
 set $browser Browser => (f)irefox (c)hromium
-bindsym Alt+b mode "$browser"
+bindsym $mod+Shift+b mode "$browser"
 mode "$browser" {
 	bindsym f workspace $ws3 ,exec firefox  ,mode "default"
   bindsym c workspace $ws3 ,exec chromium ,mode "default"
 
   bindsym Return mode "default"
   bindsym Escape mode "default"
-  bindsym Alt+b mode "default"
+  bindsym $mod+Shift+b mode "default"
 }
 
 # Office
 set $wps Office => (w)ork (e)xcel (p)pt (P)df
-bindsym Alt+o mode "$wps"
+bindsym $mod+Shift+o mode "$wps"
 mode "$wps" {
   bindsym w workspace $ws7 ,exec wps ,mode "default"
   bindsym e workspace $ws7 ,exec et  ,mode "default"
   bindsym p workspace $ws7 ,exec wpp ,mode "default"
   bindsym Shift+p workspace $ws7 ,exec wpspdf ,mode "default"
 
-
   bindsym Return mode "default"
   bindsym Escape mode "default"
-  bindsym Alt+o mode "default"
+  bindsym $mod+Shift+o mode "default"
 }
 
 # Text
 set $text Txt => (v)scodium (g)edit
-bindsym Alt+t mode "$text"
+bindsym $mod+Shift+t mode "$text"
 mode "$text" {
   bindsym v workspace $ws2 ,exec codium ,mode "default"
   bindsym g workspace $ws2 ,exec gedit  ,mode "default"
 
   bindsym Return mode "default"
   bindsym Escape mode "default"
-  bindsym Alt+t mode "default"
+  bindsym $mod+Shift+t mode "default"
 }
 
 # 录制
@@ -398,6 +390,31 @@ mode "$recording" {
   bindsym Return mode "default"
   bindsym Escape mode "default"
   bindsym $mod+g mode "default"
+}
+
+# 文件管理器
+set $filemanager filemanager => (1)ranger (2)pcmanfm
+bindsym $mod+e mode "$filemanager"
+mode "$filemanager" {
+  bindsym 1 exec $term -e ranger ,mode "default"
+  bindsym 2 exec pcmanfm         ,mode "default"
+
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+  bindsym $mod+e mode "default"
+}
+
+# 面板布局
+set $layout layout => (1)toggle split (2)stacking (3)tabbed
+bindsym $mod+c mode "$layout"
+mode "$layout" {
+  bindsym 1 layout toggle split
+  bindsym 2 layout stacking
+  bindsym 3 layout tabbed
+
+  bindsym Return mode "default"
+  bindsym Escape mode "default"
+  bindsym $mod+c mode "default"
 }
 
 
@@ -469,7 +486,6 @@ bar {
   	pango_markup            enabled
 
  colors {
- 
 	    # 字体颜色
       statusline  $black1
 	    # 背景颜色
